--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -129,10 +129,6 @@ h3 {
     margin: 24px 0;
 }
 
-.mv-48 {
-    margin: 48px 0;
-}
-
 .p-3p {
     padding: 3%;
 }
